--- a/practica1.html
+++ b/practica1.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Receta de brownies</title>
 </head>
 <body>
     <header>
-        <h1> Commit Fernando </h1>
+        <h1> Receta de brownies</h1>
+        <h2> Ingredientes</h2>
     </header>
+    <ul>
+        <li>1/2 taza de mantequilla</li>
+        <li>1 taza de azúcar</li>
+        <li>2 huevos</li>
+        <li>1/3 taza de cacao en polvo</li>
+        <li>1/2 taza de harina</li>
+        <li>1/4 cucharadita de sal</li>
+        <li>1/4 cucharadita de polvo de hornear</li>
+    </ul>
+
+    <h2>Instrucciones</h2>
+    <ol>
+        <li>Precalentar el horno a 175°C (350°F).</li>
+        <li>En un recipiente mediano, derretir la mantequilla. Mezclar el azúcar, los huevos y el cacao. Añadir la harina, la sal y el polvo de hornear. Mezclar bien.</li>
+        <li>Verter en un molde cuadrado previamente engrasado.</li>
+        <li>Hornear durante 20 a 25 minutos o hasta que al insertar un palillo, este salga limpio.</li>
+        <li>Dejar enfriar antes de cortar en cuadros.</li>
+    </ol>
 </body>
 </html>
