--- a/principal.html
+++ b/principal.html
@@ -12,10 +12,10 @@
     <main>
         <h2>Indice</h2>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="flancito.html">Flan</a></li>
+            <li><a href="gelatinas.html">Gelatina</a></li>
+            <li><a href="practica1.html">Brownies</a></li>
+            <li><a href="Hotcakes.html">Hotcakes</a></li>
         </ul>
     </main>
 </body>
