--- a/principal.html
+++ b/principal.html
@@ -13,7 +13,7 @@
         <h2>Indice</h2>
         <ul>
             <li><a href="flancito.html">Flan</a></li>
-            <li><a href="gelatinas.html">Gelatina</a></li>
+            Samuel: <li><a href="gelatinas.html">Gelatina</a></li>
             <li><a href="practica1.html">Brownies</a></li>
             <li><a href="Hotcakes.html">Hotcakes</a></li>
         </ul>
