--- a/principal.html
+++ b/principal.html
@@ -10,6 +10,8 @@
         <h1>---Recetario de postres---</h1>
     </header>
     <main>
+         <h3>¡Bienvenido al Recetario de Postres!</h3>
+        <p>Sumérgete en un mundo de dulzura y delicias con nuestro recetario de postres. Cada receta está diseñada para endulzar tus momentos especiales y crear recuerdos inolvidables. Ya sea que estés buscando el postre perfecto para una celebración o simplemente desees consentirte a ti mismo y a tus seres queridos, aquí encontrarás inspiración para satisfacer tu antojo de dulces. ¡Prepárate para dejar volar tu creatividad en la cocina y disfrutar de los sabores más deliciosos con nuestras irresistibles recetas de postres!</p>
         <h2>Indice</h2>
         <ul>
             <li><a href="flancito.html">Flan</a></li>
