--- a/practica1.html
+++ b/practica1.html
@@ -28,5 +28,7 @@
         <li>Hornear durante 20 a 25 minutos o hasta que al insertar un palillo, este salga limpio.</li>
         <li>Dejar enfriar antes de cortar en cuadros.</li>
     </ol>
+
+    <img src="imagenes/brownies.jpg">
 </body>
 </html>
