--- a/principal.html
+++ b/principal.html
@@ -17,6 +17,7 @@
             <li><a href="flancito.html">Flan</a></li>
             Samuel: <li><a href="gelatinas.html">Gelatina</a></li>
             <li><a href="practica1.html">Brownies</a></li>
+            <p> Los mejores brownies que podras comer</p>
             <li><a href="Hotcakes.html">Hotcakes</a></li>
         </ul>
     </main>
