--- a/principal.html
+++ b/principal.html
@@ -15,7 +15,8 @@
         <h2>Indice</h2>
         <ul>
             <li><a href="flancito.html">Flan</a></li>
-            Samuel: <li><a href="gelatinas.html">Gelatina</a></li>
+            Samuel: <li><a href="gelatinas.html">Gelatina</a></li> 
+            <img src="Gelatina.jpeg">
             <li><a href="practica1.html">Brownies</a></li>
             <li><a href="Hotcakes.html">Hotcakes</a></li>
         </ul>
