--- a/principal.html
+++ b/principal.html
@@ -15,7 +15,7 @@
         <h2>Indice</h2>
         <ul>
             <li><a href="flancito.html">Flan</a></li>
-            Samuel: <li><a href="gelatinas.html">Gelatina</a></li> 
+            <li><a href="gelatinas.html">Gelatina</a></li> 
             <img src="Gelatina.jpeg">
             <li><a href="practica1.html">Brownies</a></li>
             <p> Los mejores brownies que podras comer, esta receta fue elaborada por Fer</p>
