--- a/flancito.html
+++ b/flancito.html
@@ -8,7 +8,13 @@
 <body>
     <header>
         <h1>---Cómo hacer un flan---</h1>
-        <img src="flann.jpg" alt="flan">
+        <img src="flann.jpg" alt="flan" width="300" height="200">
+        <nav>
+            <ul>
+                <li>Ingredientes</li>
+                <li>Preparación</li>
+            </ul>
+        </nav>
     </header>
     
     <main>
@@ -45,5 +51,8 @@
                 superior.</li>
         </ol>
     </main>
+    <footer>
+        <p>Receta de flan ©2024</p>
+    </footer>
 </body>
 </html>
