--- a/principal.html
+++ b/principal.html
@@ -15,6 +15,7 @@
         <h2>Indice</h2>
         <ul>
             <li><a href="flancito.html">Flan</a></li>
+            <p> Un delicio y sencillo flan, esta receta fue elaborada por Ash</p>
             <li><a href="gelatinas.html">Gelatina</a></li> 
             <img src="Gelatina.jpeg">
             <li><a href="practica1.html">Brownies</a></li>
